# sevk-python

./: .gitignore  README.md  pyproject.toml
sevk/: __init__.py  client.py
sevk/markup/: __init__.py  renderer.py
sevk/resources/: __init__.py  audiences.py  broadcasts.py  contacts.py  domains.py  emails.py  events.py  segments.py  subscriptions.py  templates.py  topics.py  webhooks.py
tests/: __init__.py  conftest.py  test_markup.py  test_sdk.py
